testdata/baselines/reference/submodule/conformance/commonJSImportClassTypeReference.errors.txt
main.js(3,12): error TS7006: Parameter 'k' implicitly has an 'any' type.
mod1.js(6,1): error TS2304: Cannot find name 'exports'.


==== main.js (1 errors) ====
    const { K } = require("./mod1");
    /** @param {K} k */
    function f(k) {
               ~
!!! error TS7006: Parameter 'k' implicitly has an 'any' type.
        k.values()
    }
    
==== mod1.js (1 errors) ====
    class K {
        values() {
            return new K()
        }
    }
    exports.K = K;
    ~~~~~~~
!!! error TS2304: Cannot find name 'exports'.
    